@@ -1,5 +1,5 @@
 /*
- *    Copyright 2009-2023 the original author or authors.
+ *    Copyright 2009-2024 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -24,7 +24,6 @@ import java.io.Reader;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.apache.ibatis.BaseDataTest;
@@ -118,7 +117,7 @@ class ForEachTest {
   void shouldReportMissingPropertyName() {
     try (SqlSession sqlSession = sqlSessionFactory.openSession()) {
       Mapper mapper = sqlSession.getMapper(Mapper.class);
-      when(() -> mapper.typoInItemProperty(Collections.singletonList(new User())));
+      when(() -> mapper.typoInItemProperty(List.of(new User())));
       then(caughtException()).isInstanceOf(PersistenceException.class).hasMessageContaining(
           "There is no getter for property named 'idd' in 'class org.apache.ibatis.submitted.foreach.User'");
     }
